# arxiv-selector

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: README.md  daily-arxiv.yml
output/: .gitkeep  arxiv-2026-01-05-stats.json  arxiv-2026-01-05.md  arxiv-2026-01-06-stats.json  arxiv-2026-01-06.md  arxiv-2026-01-07-stats.json  arxiv-2026-01-07.md  arxiv-2026-01-08.md  arxiv-2026-01-09.md  arxiv-2026-01-11.md  arxiv-2026-01-12.md  arxiv-2026-01-13.md  arxiv-2026-01-14.md  arxiv-2026-01-20.md  arxiv-2026-01-21.md  arxiv-2026-01-27.md  arxiv-2026-01-28.md  arxiv-2026-01-29.md  arxiv-2026-02-02.md  arxiv-2026-02-04.md  arxiv-2026-02-10.md  arxiv-2026-02-17.md  arxiv-2026-03-02.md  arxiv-2026-03-03.md  arxiv-2026-03-04.md  arxiv-2026-03-10.md  arxiv-2026-03-11.md
src/: arxiv_client.py  config.py  llm_evaluator.py  main.py
